<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="8dp"
    android:background="@drawable/search_background">

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        style="@style/ScrollView">

        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:padding="8dp"
            android:drawableLeft="@drawable/ic_launcher">

            <TextView
                android:layout_margin="5dp"
                android:text="@string/app_name"
                style="@style/TextLarge" />

            <TextView
                android:layout_margin="5dp"
                android:text="@string/about_version"
                style="@style/TextLarge" />

            <TextView
                android:layout_margin="5dp"
                android:id="@+id/fragment_about_version"
                style="@style/AboutValue" />

            <TextView
                android:layout_margin="5dp"
                android:text="@string/about_support"
                style="@style/TextLarge" />

            <TextView
                android:layout_margin="5dp"
                android:autoLink="web"
                android:text="@string/about_support_url"
                style="@style/AboutValue" />

            <TextView
                android:layout_margin="5dp"
                android:text="@string/about_privacy"
                style="@style/TextLarge" />

            <TextView
                android:layout_margin="5dp"
                android:autoLink="web"
                android:text="@string/about_privacy_url"
                style="@style/AboutValue" />

            <TextView
                android:text="@string/about_copyright_notice"
                android:layout_gravity="center"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="15dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="10dp"
                style="@style/TextMedium.WithIcon" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:src="@drawable/ic_mainlogo"
                android:layout_gravity="center" />
        </LinearLayout>
    </ScrollView>


</LinearLayout>
